Fix header spacing

--- a/styles.css
+++ b/styles.css
@@ -123,7 +123,7 @@ text-decoration: none;
 .site-logo {
     height: 60px;
     width: 60px;
-    margin-top: -1rem;
+    margin-top: -.75rem;
     background-color: var(--clr-accent-primary);
     border-radius: 100rem;
 }
